@@ -223,7 +223,7 @@ class FrontendForm(ModelForm):
                            'imperva_private_key', 'reachfive_host', 'reachfive_client_id', 'reachfive_client_secret',
                            'mongodb_api_user', 'mongodb_api_password', 'mongodb_api_group_id',
                            "mdatp_api_tenant", "mdatp_api_appid", "mdatp_api_secret",
-                           "cortex_xdr_host", "cortex_xdr_apikey_id", "cortex_xdr_apikey",
+                           "cortex_xdr_host", "cortex_xdr_apikey_id", "cortex_xdr_apikey", "cortex_xdr_advanced_token",
                            "cybereason_host", "cybereason_username", "cybereason_password",
                            "cisco_meraki_apikey", "cisco_meraki_get_security_logs", 'proofpoint_tap_host', 'proofpoint_tap_endpoint', 'proofpoint_tap_principal',
                            "carbon_black_host", 'carbon_black_orgkey', 'carbon_black_apikey',
@@ -331,7 +331,7 @@ class FrontendForm(ModelForm):
                   'reachfive_host', 'reachfive_client_id', 'reachfive_client_secret',
                   'mongodb_api_user', 'mongodb_api_password', 'mongodb_api_group_id',
                   "mdatp_api_tenant", "mdatp_api_appid", "mdatp_api_secret",
-                  "cortex_xdr_host", "cortex_xdr_apikey_id", "cortex_xdr_apikey",
+                  "cortex_xdr_host", "cortex_xdr_apikey_id", "cortex_xdr_apikey", "cortex_xdr_advanced_token",
                   "cybereason_host", "cybereason_username", "cybereason_password",
                   "cisco_meraki_apikey", "cisco_meraki_get_security_logs", 'proofpoint_tap_host', 'proofpoint_tap_endpoint', 'proofpoint_tap_principal',
                   "proofpoint_tap_secret",
@@ -461,6 +461,7 @@ class FrontendForm(ModelForm):
             'cortex_xdr_host': TextInput(attrs={'class': 'form-control'}),
             'cortex_xdr_apikey_id': TextInput(attrs={'class': 'form-control'}),
             'cortex_xdr_apikey': TextInput(attrs={'class': 'form-control'}),
+            'cortex_xdr_advanced_token': CheckboxInput(attrs={'class': "js-switch"}),
             'cybereason_host': TextInput(attrs={'class': 'form-control'}),
             'cybereason_username': TextInput(attrs={'class': 'form-control'}),
             'cybereason_password': TextInput(attrs={'type': "password", 'class': 'form-control'}),
