@@ -1175,6 +1175,13 @@
                             {{ form.cortex_xdr_apikey.errors|safe }}
                           </div>
                         </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.cortex_xdr_advanced_token.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.cortex_xdr_advanced_token }}
+                            {{ form.cortex_xdr_advanced_token.errors|safe }}
+                          </div>
+                        </div>
                       </div>
                       <div class="col-md-12 api_clients_row" id="api_cisco_meraki_row">
                         <div class="form-group">
